# AgentDebuggerEnv

./: .dockerignore  .gitignore  Blog.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HANDOVER.md  LICENSE  README.md  app.py  calibrate.py  evaluate_model.py  evaluation_results.json  get_logs.py  implementation_plan.md  inference.py  openenv.yaml  pyproject.toml  req_test.txt  req_test2.txt  req_test3.txt  requirements.txt  requirements_kaggle.txt  test_pip.sh  test_pip2.sh  test_pip3.sh  test_pip4.sh  validator.py
.github/workflows/: ci.yml
data/: bugs_tier1.jsonl  bugs_tier2.jsonl  bugs_tier3.jsonl  generate_bugs.py
demo/: gradio_app.py
docs/: good_first_issues.md  release_notes_v0.1.0.md  report.md  research_plan.md
env/: __init__.py  environment.py  models.py  sandbox.py  server.py
env/graders/: __init__.py  base_grader.py  grader_easy.py  grader_hard.py  grader_medium.py
env/tasks/: __init__.py  registry.py  task_easy.py  task_hard.py  task_medium.py
leaderboard/: index.html
results/: README.md
scratch/: data_tier1.py  data_tier2.py  data_tier3.py  debug.txt  debug2.txt  fix_all.py  gen_t1_base.py  merge.py  normalize_inputs.py
scripts/: gate_api.py  run_matrix.sh  setup_gpu_box.sh
server/: __init__.py  app.py  models.py  reward_calculator.py
src/agentdebugger/: __init__.py
src/agentdebugger/envs/: curriculum_env.py
src/agentdebugger/sandbox/: runner.py
src/agentdebugger/training/: grpo.py
tests/: __init__.py  test_environment.py  test_freeform.py  test_graders.py  test_integration.py  test_sandbox.py  test_training_stages.py
training/: AgentDebuggerEnv_GRPO_Training.ipynb  train_grpo.py
