[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentdebugger-env"
version = "1.0.0"
description = "An OpenEnv-compliant debugging environment for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "pydantic==2.6.4",
    "openai==2.7.2",
    "openenv-core>=0.2.0",
    "requests==2.31.0",
    "python-dotenv==1.0.1",
    "pytest==8.1.0",
    "httpx==0.27.0",
    "RestrictedPython==7.4"
]

[project.scripts]
server = "server.app:main"
