[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentdebugger-env"
version = "1.0.0"
description = "An OpenEnv-compliant debugging environment for AI agents"
readme = "README.md"
requires-python = ">=3.10"
# Dependencies are managed via requirements.txt to avoid pip resolution conflicts
# during HF Spaces Docker builds. Keep this list empty.
dependencies = []

[tool.setuptools.packages.find]
include = ["env*", "server*"]

[project.scripts]
server = "server.app:main"
